syntax = "proto3";

package ProtobufCompat;

message BooleanMessage {
    bool bool_field = 1;
}

message IntegerMessage {
    int32 int32_field = 1;
}

message BnMessage {
    bool bool_field = 1;
    int32 int32_field = 2;
}

message Bn2Message {
    int32 int32_field = 2;
}

message N8Message {
    int64 int64_field = 1;
}

message BytesMessage {
    bytes data = 1;
}
